# emulatorcursor

./: .gitignore  index.html  validate_draw.py
controller/: CMakeLists.txt  Dockerfile  README.md  docker-build.sh
controller/src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
cursordata/: Sheet 1-Table 1.csv  Sheet 2-Table 1.csv  Sheet 3-Table 1.csv
